<resources>
    <string name="app_name">MVPSample</string>

    <!--login界面-->
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_login_text_error">请填写账号和密码</string>

    <!--register界面-->
    <string name="register_input_phone_num">请输入手机号</string>
    <string name="register_input_verify_num">请输入验证码</string>
    <string name="register_get_verify">获取验证码</string>
    <string name="register_register">注册</string>
    <string name="register_input_phone_and_verify">请输入手机号及验证码</string>

</resources>
