<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_input_phone_num"/>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/register_get_verify"/>

    <EditText
        android:id="@+id/etVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_toLeftOf="@id/btnVerify"
        android:hint="@string/register_input_verify_num"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etVerify"
        android:layout_marginTop="36dp"
        android:enabled="false"
        android:text="@string/register_register"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>